Add devcontainer and Docker configuration for cross-platform development

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-OPENAI_API_KEY=mykey
-ANTHROPIC_API_KEY=mykey
+OPENAI_API_KEY=your_key_here
+ANTHROPIC_API_KEY=your_key_here
+MODAL_TOKEN_ID=your_token_id_here
+MODAL_TOKEN_SECRET=your_token_secret_here
